[refactor] refactor week5 program

--- a/week5/week5.ipynb
+++ b/week5/week5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "81f6b176",
    "metadata": {},
    "outputs": [],
@@ -69,33 +69,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "febc2508",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[debug] x_length =  23.0\n",
-      "[debug] y_length =  33.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from graphics import *\n",
     "\n",
+    "class rectangle:\n",
+    "    def __init__(self, p):\n",
+    "        self.p1 = p[0]\n",
+    "        self.p2 = p[1]\n",
+    "    \n",
+    "    def get_x_length(self):\n",
+    "        return abs(self.p1.getX() - self.p2.getX())\n",
+    "    \n",
+    "    def get_y_length(self):\n",
+    "        return abs(self.p1.getY() - self.p2.getY())\n",
+    "    \n",
+    "    def get_perimeter(self):\n",
+    "        return str(2 * (self.get_x_length() + self.get_y_length()))\n",
     "\n",
-    "def get_perimeter(x, y):\n",
-    "    return str(2 * (x + y))\n",
+    "    def get_area(self):\n",
+    "        return str((self.get_x_length() * self.get_y_length()))\n",
     "\n",
-    "\n",
-    "def get_area(x, y):\n",
-    "    return str(x * y)\n",
-    "\n",
-    "\n",
-    "def get_diagonal(x, y):\n",
-    "    return str(round((x**2 + y**2)**0.5, 2))\n",
+    "    def get_diagonal(self):\n",
+    "        return str(round((self.get_x_length()**2 + self.get_y_length()**2)**0.5, 2))\n",
     "\n",
     "def get_point_array(win):\n",
     "    p_array = []\n",
@@ -110,20 +109,18 @@
     "    rectangle.setWidth(2)\n",
     "    rectangle.draw(win)\n",
     "\n",
+    "def draw_text(input_rectangle,win):\n",
+    "    Text(Point(50, 140), '邊界長：' + input_rectangle.get_perimeter()).draw(win)\n",
+    "    Text(Point(47, 160), '面積：' + input_rectangle.get_area()).draw(win)\n",
+    "    Text(Point(68, 180),\n",
+    "         '兩點直線長度：' + input_rectangle.get_diagonal()).draw(win)\n",
+    "    \n",
     "def main():\n",
     "    win = GraphWin(\"Click Me!\")\n",
     "    p_array = get_point_array(win)\n",
+    "    input_rectangle = rectangle(p_array)\n",
     "    draw_rectangle(p_array,win)\n",
-    "    \n",
-    "    length = abs(p_array[0].getX() - p_array[1].getX())\n",
-    "    width = abs(p_array[0].getY() - p_array[1].getY())\n",
-    "    print('[debug] length = ', length)\n",
-    "    print('[debug] width = ', width)\n",
-    "\n",
-    "    Text(Point(50, 140), '邊界長：' + get_perimeter(length, width)).draw(win)\n",
-    "    Text(Point(47, 160), '面積：' + get_area(length, width)).draw(win)\n",
-    "    Text(Point(68, 180),\n",
-    "         '兩點直線長度：' + get_diagonal(length, width)).draw(win)\n",
+    "    draw_text(input_rectangle,win)\n",
     "    time.sleep(20)\n",
     "    win.close()\n",
     "\n",
@@ -144,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "04c07218",
    "metadata": {},
    "outputs": [
@@ -152,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[debug] length1= 50.01 length2= 70.11 length3= 87.62\n"
+      "74.0\n"
      ]
     }
    ],
@@ -160,43 +157,57 @@
     "from graphics import *\n",
     "\n",
     "\n",
-    "# 取三角形周長\n",
-    "def get_perimeter(p_array):\n",
-    "    length1, length2, length3 = get_length(p_array)\n",
-    "    print(\"[debug] length1=\", length1, \"length2=\", length2, \"length3=\", length3)\n",
-    "    return str(round((length1 + length2 + length3), 2))\n",
+    "class triangle:\n",
+    "    def __init__(self, p):\n",
+    "        self.p_array = p\n",
+    "        self.length1 = self.get_diagonal(p[0], p[1])\n",
+    "        self.length2 = self.get_diagonal(p[1], p[2])\n",
+    "        self.length3 = self.get_diagonal(p[2], p[0])\n",
     "\n",
-    "# 取面積\n",
-    "def get_area(p_array):\n",
-    "    length1, length2, length3 = get_length(p_array)\n",
-    "    s = (length1 + length2 + length3) / 2\n",
-    "    return str(\n",
-    "        round((s * (s - length1) * (s - length2) * (s - length3))**0.5, 2))\n",
+    "    # 兩點直線距離 (三角形其中一個邊)\n",
+    "    def get_diagonal(self, p1, p2):\n",
+    "        x = abs(p1.getX() - p2.getX())\n",
+    "        y = abs(p1.getY() - p2.getY())\n",
+    "        return round((x**2 + y**2)**0.5, 2)\n",
     "\n",
-    "# 取單邊長度\n",
-    "def get_length(p_array):\n",
-    "    return get_diagonal(p_array[0], p_array[1]), get_diagonal(\n",
-    "        p_array[1], p_array[2]), get_diagonal(p_array[2], p_array[0])\n",
+    "    # 周長\n",
+    "    def get_perimeter(self):\n",
+    "        return str(round((self.length1 + self.length2 + self.length3), 2))\n",
     "\n",
-    "# 取兩點直線距離\n",
-    "def get_diagonal(p1, p2):\n",
-    "    x = abs(p1.getX() - p2.getX())\n",
-    "    y = abs(p1.getY() - p2.getY())\n",
-    "    return round((x**2 + y**2)**0.5, 2)\n",
+    "    # 取面積\n",
+    "    def get_area(self):\n",
+    "        s = (self.length1 + self.length2 + self.length3) / 2\n",
+    "        return str(\n",
+    "            round((s * (s - self.length1) * (s - self.length2) *\n",
+    "                   (s - self.length3))**0.5, 2))\n",
     "\n",
     "\n",
-    "def main():\n",
-    "    win = GraphWin(\"Click Me!\")\n",
+    "def get_point_array(win):\n",
     "    p_array = []\n",
     "    for i in range(3):\n",
     "        p = win.getMouse()\n",
     "        p_array.append(p)\n",
+    "    return p_array\n",
+    "\n",
+    "\n",
+    "def draw_triangle(p_array, win):\n",
     "    triangle = Polygon(p_array[0], p_array[1], p_array[2])\n",
     "    triangle.setFill(\"green\")\n",
     "    triangle.setWidth(2)\n",
     "    triangle.draw(win)\n",
-    "    Text(Point(50, 140), '邊界長：' + get_perimeter(p_array)).draw(win)\n",
-    "    Text(Point(47, 160), '面積：' + get_area(p_array)).draw(win)\n",
+    "\n",
+    "\n",
+    "def draw_text(input_triangle, win):\n",
+    "    Text(Point(50, 140), '邊界長：' + input_triangle.get_perimeter()).draw(win)\n",
+    "    Text(Point(47, 160), '面積：' + input_triangle.get_area()).draw(win)\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    win = GraphWin(\"Click Me!\")\n",
+    "    p_array = get_point_array(win)\n",
+    "    input_triangle = triangle(p_array)\n",
+    "    draw_triangle(p_array, win)\n",
+    "    draw_text(input_triangle, win)\n",
     "    time.sleep(20)\n",
     "    win.close()\n",
     "\n",
@@ -216,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "e4681237",
    "metadata": {},
    "outputs": [
@@ -224,9 +235,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入自然數(正整數)2\n",
-      "sunN 的結果為 3\n",
-      "sunNCubes 的結果為 9\n"
+      "請輸入自然數(正整數)10\n",
+      "sunN 的結果為 55\n",
+      "sunNCubes 的結果為 3025\n"
      ]
     }
    ],
@@ -241,15 +252,20 @@
     "        total += num**3\n",
     "    return total\n",
     "\n",
-    "try:\n",
-    "    input_value = int(input(\"請輸入自然數(正整數)\"))\n",
-    "    if (input_value <= 0):\n",
-    "        print(\"輸入有誤\")\n",
-    "    else:\n",
-    "        print(\"sunN 的結果為\", sumN(input_value))\n",
-    "        print(\"sunNCubes 的結果為\", sunNCubes(input_value))\n",
-    "except:\n",
-    "    print(\"請輸入數字\")"
+    "\n",
+    "def main():\n",
+    "    try:\n",
+    "        input_value = int(input(\"請輸入自然數(正整數)\"))\n",
+    "        if (input_value <= 0):\n",
+    "            print(\"輸入有誤\")\n",
+    "        else:\n",
+    "            print(\"sunN 的結果為\", sumN(input_value))\n",
+    "            print(\"sunNCubes 的結果為\", sunNCubes(input_value))\n",
+    "    except:\n",
+    "        print(\"請輸入數字\")\n",
+    "\n",
+    "\n",
+    "main()"
    ]
   },
   {
@@ -263,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "d3241357",
    "metadata": {},
    "outputs": [
@@ -288,16 +304,16 @@
     "        try:\n",
     "            afterList.append(int(strList[index]))\n",
     "        except:\n",
-    "            print(\"內含無法轉換的字串：\",strList[index])\n",
+    "            print(\"內含無法轉換的字串：\", strList[index])\n",
     "    return afterList\n",
-    "    \n",
-    "strList = [\"32\",\"test1\", \"21\", \"56\",\"test2\"]\n",
-    "print(\"轉換前：\",strList)\n",
+    "\n",
+    "\n",
+    "strList = [\"32\", \"test1\", \"21\", \"56\", \"test2\"]\n",
+    "print(\"轉換前：\", strList)\n",
     "after_list = toNumbers(strList)\n",
     "print(\"轉換後：\", after_list)\n",
     "for index in range(len(after_list)):\n",
-    "        print (type(after_list[index]))\n",
-    "    \n"
+    "    print(type(after_list[index]))"
    ]
   },
   {
@@ -315,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "87d7892a",
    "metadata": {},
    "outputs": [
@@ -340,6 +356,7 @@
     "base = 100\n",
     "persent = size / base\n",
     "\n",
+    "\n",
     "def drawFace(center, size, win):\n",
     "    make_face(center, size, win)\n",
     "    make_eyes(center, size, win)\n",
@@ -348,7 +365,7 @@
     "\n",
     "def make_eyes(center, size, win):\n",
     "    left_eye = Point(center.getX() - 40 * persent,\n",
-    "                        center.getY() - 40 * persent)\n",
+    "                     center.getY() - 40 * persent)\n",
     "    left_circ = Circle(left_eye, 20 * persent)\n",
     "    left_circ.setFill('black')\n",
     "    left_circ.draw(win)\n",
@@ -356,34 +373,41 @@
     "    right_circ = left_circ.clone()\n",
     "    right_circ.move(80 * persent, 0)\n",
     "    right_circ.draw(win)\n",
-    "    \n",
+    "\n",
+    "\n",
     "def make_face(center, size, win):\n",
     "    face_circ = Circle(center, size)\n",
     "    face_circ.setFill('yellow')\n",
     "    face_circ.draw(win)\n",
-    "    \n",
+    "\n",
+    "\n",
     "def make_mouth(center, size, win):\n",
     "    mouth = Oval(\n",
     "        Point(center.getX() - 30 * persent,\n",
     "              center.getY() + 30 * persent),\n",
-    "              Point(center.getX() + 30 * persent,\n",
-    "                    center.getY() + 80 * persent))\n",
+    "        Point(center.getX() + 30 * persent,\n",
+    "              center.getY() + 80 * persent))\n",
     "    mouth.setFill('black')\n",
     "    mouth.draw(win)\n",
-    "    # 遮蔽，主要變成半圓形    \n",
-    "    rectangle = Rectangle(Point(center.getX() - 30 * persent, center.getY()), Point(center.getX() + 40 * persent, center.getY()+55* persent))\n",
+    "    # 遮蔽，主要變成半圓形\n",
+    "    rectangle = Rectangle(\n",
+    "        Point(center.getX() - 30 * persent, center.getY()),\n",
+    "        Point(center.getX() + 40 * persent,\n",
+    "              center.getY() + 55 * persent))\n",
     "    rectangle.setFill(\"yellow\")\n",
     "    rectangle.setWidth(0)\n",
     "    rectangle.draw(win)\n",
-    "    \n",
+    "\n",
+    "\n",
     "def main():\n",
     "    win = GraphWin(\"shock\", 500, 500)\n",
     "    try:\n",
-    "        while True: \n",
+    "        while True:\n",
     "            center = win.getMouse()\n",
     "            drawFace(center, size, win)\n",
-    "    except :\n",
+    "    except:\n",
     "        print(\"結束程式\")\n",
+    "\n",
     "\n",
     "main()"
    ]
