--- a/week5/week5.ipynb
+++ b/week5/week5.ipynb
@@ -76,17 +76,19 @@
    "source": [
     "from graphics import *\n",
     "\n",
+    "\n",
+    "# 正方形 class\n",
     "class rectangle:\n",
     "    def __init__(self, p):\n",
     "        self.p1 = p[0]\n",
     "        self.p2 = p[1]\n",
-    "    \n",
+    "\n",
     "    def get_x_length(self):\n",
     "        return abs(self.p1.getX() - self.p2.getX())\n",
-    "    \n",
+    "\n",
     "    def get_y_length(self):\n",
     "        return abs(self.p1.getY() - self.p2.getY())\n",
-    "    \n",
+    "\n",
     "    def get_perimeter(self):\n",
     "        return str(2 * (self.get_x_length() + self.get_y_length()))\n",
     "\n",
@@ -94,7 +96,9 @@
     "        return str((self.get_x_length() * self.get_y_length()))\n",
     "\n",
     "    def get_diagonal(self):\n",
-    "        return str(round((self.get_x_length()**2 + self.get_y_length()**2)**0.5, 2))\n",
+    "        return str(\n",
+    "            round((self.get_x_length()**2 + self.get_y_length()**2)**0.5, 2))\n",
+    "\n",
     "\n",
     "def get_point_array(win):\n",
     "    p_array = []\n",
@@ -103,24 +107,26 @@
     "        p_array.append(p)\n",
     "    return p_array\n",
     "\n",
-    "def draw_rectangle(p_array,win):\n",
+    "\n",
+    "def draw_rectangle(p_array, win):\n",
     "    rectangle = Rectangle(p_array[0], p_array[1])\n",
     "    rectangle.setFill(\"green\")\n",
     "    rectangle.setWidth(2)\n",
     "    rectangle.draw(win)\n",
     "\n",
-    "def draw_text(input_rectangle,win):\n",
+    "\n",
+    "def draw_text(input_rectangle, win):\n",
     "    Text(Point(50, 140), '邊界長：' + input_rectangle.get_perimeter()).draw(win)\n",
     "    Text(Point(47, 160), '面積：' + input_rectangle.get_area()).draw(win)\n",
-    "    Text(Point(68, 180),\n",
-    "         '兩點直線長度：' + input_rectangle.get_diagonal()).draw(win)\n",
-    "    \n",
+    "    Text(Point(68, 180), '兩點直線長度：' + input_rectangle.get_diagonal()).draw(win)\n",
+    "\n",
+    "\n",
     "def main():\n",
     "    win = GraphWin(\"Click Me!\")\n",
     "    p_array = get_point_array(win)\n",
     "    input_rectangle = rectangle(p_array)\n",
-    "    draw_rectangle(p_array,win)\n",
-    "    draw_text(input_rectangle,win)\n",
+    "    draw_rectangle(p_array, win)\n",
+    "    draw_text(input_rectangle, win)\n",
     "    time.sleep(20)\n",
     "    win.close()\n",
     "\n",
@@ -298,7 +304,7 @@
     }
    ],
    "source": [
-    "def toNumbers(strList):\n",
+    "def to_numbers(strList):\n",
     "    afterList = []\n",
     "    for index in range(len(strList)):\n",
     "        try:\n",
@@ -310,7 +316,7 @@
     "\n",
     "strList = [\"32\", \"test1\", \"21\", \"56\", \"test2\"]\n",
     "print(\"轉換前：\", strList)\n",
-    "after_list = toNumbers(strList)\n",
+    "after_list = to_numbers(strList)\n",
     "print(\"轉換後：\", after_list)\n",
     "for index in range(len(after_list)):\n",
     "    print(type(after_list[index]))"
@@ -331,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "87d7892a",
    "metadata": {},
    "outputs": [
@@ -352,13 +358,13 @@
     "# 左右眼 半徑 20, 離中心往上 40 , 離中心左右 40\n",
     "# 嘴巴長 60 , 高50 , 離中心往下 30 公分\n",
     "\n",
-    "size = 50\n",
+    "size = 150\n",
     "base = 100\n",
     "persent = size / base\n",
     "\n",
     "\n",
     "def drawFace(center, size, win):\n",
-    "    make_face(center, size, win)\n",
+    "    make_head(center, size, win)\n",
     "    make_eyes(center, size, win)\n",
     "    make_mouth(center, size, win)\n",
     "\n",
@@ -375,7 +381,7 @@
     "    right_circ.draw(win)\n",
     "\n",
     "\n",
-    "def make_face(center, size, win):\n",
+    "def make_head(center, size, win):\n",
     "    face_circ = Circle(center, size)\n",
     "    face_circ.setFill('yellow')\n",
     "    face_circ.draw(win)\n",
@@ -389,7 +395,7 @@
     "              center.getY() + 80 * persent))\n",
     "    mouth.setFill('black')\n",
     "    mouth.draw(win)\n",
-    "    # 遮蔽，主要變成半圓形\n",
+    "    # 遮蔽，變成半圓形\n",
     "    rectangle = Rectangle(\n",
     "        Point(center.getX() - 30 * persent, center.getY()),\n",
     "        Point(center.getX() + 40 * persent,\n",
